# CMake_Playground

02/02_02/end/HelloCMake/: CMakeLists.txt  main.cpp
03/03_01/begin/ImageLite/: CMakeLists.txt
03/03_01/begin/ImageLite/libs/core/: CMakeLists.txt
03/03_01/begin/ImageLite/libs/filters/: CMakeLists.txt
03/03_01/end/ImageLite/: CMakeLists.txt
03/03_01/end/ImageLite/libs/filters/src/: filters.cpp
03/03_02/begin/ImageLite/: CMakeLists.txt
03/03_02/end/ImageLite/tests/core_tests/: test_image.cpp
03/03_03/begin/ImageLite/: CMakeLists.txt
03/03_03/begin/ImageLite/libs/core/: CMakeLists.txt
03/03_03/end/ImageLite/: CMakeLists.txt
03/03_05/begin/ImageLite/: CMakeLists.txt
03/03_05/begin/ImageLite/libs/core/include/imagelite/: image.h
03/03_05/begin/ImageLite/libs/filters/: CMakeLists.txt
03/03_05/end/ImageLite/: CMakeLists.txt
03/03_05/end/ImageLite/libs/core/: CMakeLists.txt
04/04_01/begin/ImageLite/: CMakeLists.txt
04/04_01/begin/ImageLite/tests/filters_tests/: test_filters.cpp
04/04_02/begin/ImageLite/: CMakeLists.txt
04/04_02/begin/ImageLite/libs/core/: CMakeLists.txt
04/04_02/end/ImageLite/: CMakeLists.txt
04/04_02/end/ImageLite/tests/core_tests/: test_core.cpp
04/04_03/end/ImageLite/libs/core/src/: image.cpp
04/04_04/begin/ImageLite/: CMakeLists.txt
04/04_04/begin/ImageLite/libs/core/: CMakeLists.txt
04/04_04/end/ImageLite/: CMakeLists.txt  README.md
04/04_04/end/ImageLite/libs/core/: CMakeLists.txt
04/04_04/end/ImageLite/libs/filters/: CMakeLists.txt
04/04_05/end/ImageLite/: CMakeLists.txt
04/04_05/end/ImageLite/libs/core/: CMakeLists.txt
05/05_01/begin/ImageLite/apps/cli/src/: main.cpp
05/05_01/end/ImageLite/libs/filters/include/imagelite/: filters.h
05/05_02/begin/ImageLite/: CMakeLists.txt
05/05_02/end/ImageLite/libs/core/: CMakeLists.txt
05/05_02/end/ImageLite/libs/core/include/imagelite/: core.h
05/05_03/begin/ImageLite/libs/core/: CMakeLists.txt
05/05_03/end/ImageLite/apps/cli/src/: main.cpp
06/06_01/begin/ImageLite/: CMakeLists.txt
06/06_01/end/ImageLite/: CMakeLists.txt
06/06_01/end/ImageLite/libs/core/include/imagelite/: platform_info.h
06/06_01/end/ImageLite/libs/core/src/: platform_info.cpp
06/06_02/begin/ImageLite/apps/cli/src/: main.cpp
06/06_02/begin/ImageLite/libs/core/: CMakeLists.txt
06/06_02/begin/ImageLite/scripts/: generate_formats.py
06/06_02/end/ImageLite/: CMakeLists.txt
06/06_02/end/ImageLite/libs/filters/src/: filters.cpp
06/06_03/end/ImageLite/libs/filters/: CMakeLists.txt
06/06_04/begin/ImageLite/: CMakeLists.txt
06/06_04/begin/ImageLite/.github/workflows/: build.yml
06/06_04/begin/ImageLite/libs/core/include/imagelite/: log.h
06/06_04/begin/ImageLite/tests/: CMakeLists.txt
06/06_04/end/ImageLite/.github/workflows/: build.yml
06/06_04/end/ImageLite/libs/core/src/: core.cpp  image.cpp
